5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1798_2571.log
== SUBMITION (2019-06-10 15:42:44) 
-- CODE:
w = input("String: ")
c = ''
for i in w:
	if (i.lower() != "a"):
		w = w + 1
print(c)
-- EXECUTION TIME:
0.735895
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2571/main.py", line 5, in <module>
    w = w + 1
TypeError: Can't convert 'int' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:43:40) 
-- CODE:
w = input("String: ")
c = ''
for i in w:
	if (i.upper() != "A"):
		w = w + 1
print(c)
-- EXECUTION TIME:
0.608304
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2571/main.py", line 5, in <module>
    w = w + 1
TypeError: Can't convert 'int' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:43:52) 
-- CODE:
w = input("String: ")
c = ''
for i in w:
	if (i.upper() != "A"):
		w = w + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    w = w + 1
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:44:32) 
-- CODE:
w = input("String: ")
c = ''
for i in w:
	if (i.upper() != "A"):
		c = c + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = c + 1
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:44:32) 
-- CODE:
w = input("String: ")
c = ''
for i in w:
	if (i.upper() != "A"):
		c = c + 1
print(c)
-- EXECUTION TIME:
0.797462
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2571/main.py", line 5, in <module>
    c = c + 1
TypeError: Can't convert 'int' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:45:14) 
-- CODE:
w = input("String: ")
c = ""
for i in w:
	if (i.upper() != "A"):
		c = c + 1
print(c)
-- EXECUTION TIME:
0.636338
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2571/main.py", line 5, in <module>
    c = c + 1
TypeError: Can't convert 'int' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:45:30) 
-- CODE:
w = input("String: ")
c = ""
for i in w:
	if (i.upper() != "A"):
		c = c + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = c + 1
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:14:54) 
-- CODE:
w = input("String: ")
c = ""
n = len(s)
for i in range(n):
	if (w[i] != "a") and (s[i] != "A"):
		c = c + c[1]
print(c)
-- EXECUTION TIME:
0.595901
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2571/main.py", line 3, in <module>
    n = len(s)
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:15:37) 
-- CODE:
w = input("String: ")
c = ""
n = len(s)
for i in range(n):
	if(w[i] != "a") and (s[i] != "A"):
		c = c + w[1]
print(c)
-- EXECUTION TIME:
0.858363
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2571/main.py", line 3, in <module>
    n = len(s)
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:16:15) 
-- CODE:
s = input("String: ")
sn = ""
n = len(s)
for i in range(n):
	if(s[i] != "a") and (s[i] != "A"):
		sn = sn + s[1]
print(s)
-- EXECUTION TIME:
0.52828
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computacao-ICOMP-UFAM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:16:21) 
-- CODE:
s = input("String: ")
sn = ""
n = len(s)
for i in range(n):
	if(s[i] != "a") and (s[i] != "A"):
		sn = sn + s[1]
print(sn)
-- EXECUTION TIME:
0.487977
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:16:31) 
-- CODE:
s = input("String: ")
sn = ""
n = len(s)
for i in range(n):
	if(s[i] != "a") and (s[i] != "A"):
		sn = sn + s[i]
print(sn)
-- EXECUTION TIME:
0.537667
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
